working frontend, next do advanced search

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,9 @@
     <!-- Mobile Friendly Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
 
+    <!-- Favicon -->
+    <link rel='shortcut icon' type='images/png' href='./res/images/rentburrow_favicon.png' / >
+
     <!-- Regular Bootstrap -->
     <link rel="stylesheet" href="/style/style.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
