included ionic css

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 
     <!-- Regular Bootstrap -->
     <link rel="stylesheet" href="/style/style.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/libs/bootstrap.css">
 
     <!-- Google Maps -->
     <script src="https://maps.googleapis.com/maps/api/js"></script>
@@ -17,10 +17,10 @@
     <!-- React Bootstrap -->
     <!-- Latest compiled and minified CSS -->
 	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
+	 <link rel="stylesheet" href="/libs/bootstrap-theme.min.css">
 
     <!-- Ionic Styles & Icons -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+    <link href="/libs/ionic.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
 
     <!-- jQuery niceScroll -->
